syntax = "proto3";
package flux.auth;

service AuthService {
    rpc Join(JoinRequest) returns (JoinResponse);
    rpc Complete(CompleteRequest) returns (CompleteResponse);
}

message JoinRequest {
    optional string email = 1;
}

message JoinResponse {
    optional string response = 1;
}

message CompleteRequest {
    optional string request = 1;
}

message CompleteResponse {
    optional string jwt = 1;
}
